
November 16, 2010
-----------------
NOISSUE by Michelle: Removed unneeded CSS left over from before Views was a dependency.
#868942 by Michelle: Changed new content links to use divs instead of a link and added button code.
#935322 by Michelle: Moved what was 'secondary links' into a 'forum tools' jump menu.
#935322 by Michelle: Switched tabs to being on by default.

November 14, 2010
-----------------
#933862 by Michelle: Restored compatability with the Comment Edited module that was inadvertantly lost.

October 14, 2010
----------------
#868942 by Michelle: Redid image handling on pseudo buttons to use background image with actual text on top instead of image replacement.

October 8, 2010
---------------
#933862 by Michelle: Added 'last edited' note based on node revisions. Changed Commented Edited integration to make use of new variable.
NOISSUE by Michelle: Fixed missing print statement around unpublished post note.

October 4, 2010
---------------
#905860 by Michelle: Ensure advanced_forum_get_forum_types returns an array()
#876294 by RedKing: Updated French translation.
NOISSUE by Michelle: Made submit button IDs more specific on searching. Tangently related to #883452.
#883452 by rodrigoaguilera: Added a specific ID to the topic list sort form.
NOISSUE by Michelle: Changed 'search' buttons to 'search forum' and 'search topic'.
NOISSUE by Michelle: Added message about unpublished post to post template.
NOISSUE by Michelle: Fixed bug with new comment jump link on topic not working with nodecomment.

September 23, 2010
------------------
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for core comments.
#376039 by Michelle with thanks to NowPublic for code reference: Added 'in reply to' for node comments.
#913822 by Michelle, meustrus: Changed sorting so updates only bump on the New & My views.
NOISSUE by Michelle: Many tweaks to the included views.