@@ -138,113 +138,6 @@ span.topic-icon {
 }
 
 
-/* TEXT REPLACEMENT IMAGES - ENGLISH ***************************************/
+/* BUTTONIZED LINKS ********************************************************/
 
-/* Post new topic options on topic listings */
-.en .forum-primary-links .forum-links li a {
-  display: block;
-  float: left;
-  width: 95px;
-  height: 30px;
-  position: relative;
-  margin: 0; 
-  padding: 0 25px 0 0;
-}
-
-.en .forum-primary-links span.image-replace {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 30px;
-  width: 95px;
-}
-
-.en .forum-primary-links .forum span.image-replace {
-  background: transparent url(images/en/new-topic.png) no-repeat;
-}
-
-.en .forum-primary-links .poll span.image-replace {
-  background: transparent url(images/en/new-poll.png) no-repeat;
-}
-
-/* New topic / locked on top / bottom of topics */
-.en .reply-link {
-  position: relative;
-  width: 95px;
-  height: 30px;
-  padding: 0 25px 0 0;
-}
-
-.en .reply-link span {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 30px;
-  width: 95px;
-}
-
-.en .reply-allowed span {
-  background: transparent url(images/en/post-reply.png) no-repeat;
-}
-
-.en .reply-locked span {
-  background: transparent url(images/en/locked-topic.png) no-repeat;
-}
-
-/* Post links */
-.en .comment_add a,
-.en .comment_reply a,
-.en .quote a,
-.en .comment_edit a,
-.en .post_edit a,
-.en .comment_delete a,
-.en .post_delete a {
-  display: block;
-  float: right;
-  height: 16px;
-  width: 50px;
-  position: relative;
-  text-decoration: none;
-  margin: 0; 
-  padding-right: 5px;
-}
-
-.en .comment_add span.image-replace,
-.en .comment_reply span.image-replace,
-.en .quote span.image-replace,
-.en .comment_edit span.image-replace,
-.en .post_edit span.image-replace,
-.en .comment_delete span.image-replace,
-.en .post_delete span.image-replace {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 16px;
-  width: 50px;
-}
-
-.en .comment_add span,
-.en .comment_reply span {
-  background: transparent url(images/en/reply.png) no-repeat;
-}
-
-.en .quote span {
-  background: transparent url(images/en/quote.png) no-repeat;
-}
-
-.en .comment_edit span,
-.en .post_edit span {
-  background: transparent url(images/en/edit.png) no-repeat;
-}
-
-.en .comment_delete span,
-.en .post_delete span {
-  background: transparent url(images/en/delete.png) no-repeat;
-}
-
+/* Coming soon */
