@@ -137,113 +137,90 @@ span.topic-icon {
   display: block;
 }
 
+/* BUTTONIZED LINKS ********************************************************/
 
-/* TEXT REPLACEMENT IMAGES - ENGLISH ***************************************/
+/*** General buttonized links CSS */
 
-/* Post new topic options on topic listings */
-.en .forum-primary-links .forum-links li a {
-  display: block;
-  float: left;
-  width: 95px;
-  height: 30px;
-  position: relative;
-  margin: 0; 
-  padding: 0 25px 0 0;
+/* The button class is on the 'a'. */
+.af-button-large {
 }
 
-.en .forum-primary-links span.image-replace {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 30px;
-  width: 95px;
+/* The button class is on the 'a'. */
+.af-button-small {
 }
 
-.en .forum-primary-links .forum span.image-replace {
-  background: transparent url(images/en/new-topic.png) no-repeat;
+/* The span surrounds the text of the link. */
+.af-button-large span {
 }
 
-.en .forum-primary-links .poll span.image-replace {
-  background: transparent url(images/en/new-poll.png) no-repeat;
+/* The span surrounds the text of the link. */
+.af-button-small span {
 }
 
-/* New topic / locked on top / bottom of topics */
-.en .reply-link {
-  position: relative;
-  width: 95px;
-  height: 30px;
-  padding: 0 25px 0 0;
+/*** Reply/Locked at the top and bottom of individual topics. */
+
+/* Applies to both reply and locked. */
+.reply-link .af-button-large {
 }
 
-.en .reply-link span {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 30px;
-  width: 95px;
+.reply-link .af-button-large span{
 }
 
-.en .reply-allowed span {
-  background: transparent url(images/en/post-reply.png) no-repeat;
+/* Reply link */
+.reply-allowed .af-button-large {
 }
 
-.en .reply-locked span {
-  background: transparent url(images/en/locked-topic.png) no-repeat;
+.reply-allowed .af-button-large span{
 }
 
-/* Post links */
-.en .comment_add a,
-.en .comment_reply a,
-.en .quote a,
-.en .comment_edit a,
-.en .post_edit a,
-.en .comment_delete a,
-.en .post_delete a {
-  display: block;
-  float: right;
-  height: 16px;
-  width: 50px;
-  position: relative;
-  text-decoration: none;
-  margin: 0; 
-  padding-right: 5px;
+/* Locked topic (not a link so an extra span is used instead of the "a". */
+.reply-locked .af-button-large {
 }
 
-.en .comment_add span.image-replace,
-.en .comment_reply span.image-replace,
-.en .quote span.image-replace,
-.en .comment_edit span.image-replace,
-.en .post_edit span.image-replace,
-.en .comment_delete span.image-replace,
-.en .post_delete span.image-replace {
-  display: block;
-  position: absolute;
-  top: 5px;
-  left: 0;
-  z-index: 1; /*for Opera 5 and 6*/
-  height: 16px;
-  width: 50px;
+.reply-locked .af-button-large span{
 }
 
-.en .comment_add span,
-.en .comment_reply span {
-  background: transparent url(images/en/reply.png) no-repeat;
+/*** Links on the individual posts (nodes and comments). */
+
+/* Applies to all post links */
+.forum-post-links .af-button-small {
 }
 
-.en .quote span {
-  background: transparent url(images/en/quote.png) no-repeat;
+.forum-post-links .af-button-small span {
 }
 
-.en .comment_edit span,
-.en .post_edit span {
-  background: transparent url(images/en/edit.png) no-repeat;
+/*** Known links that might have distinct graphics. */
+
+/* Reply */
+.comment_add .af-button-small,
+.comment_reply .af-button-small {
 }
 
-.en .comment_delete span,
-.en .post_delete span {
-  background: transparent url(images/en/delete.png) no-repeat;
+.comment_add .af-button-small span,
+.comment_reply .af-button-small span {
+}
+
+/* Quote */
+.quote .af-button-small {
+}
+
+.quote .af-button-small span {
+}
+
+/* Edit */
+.comment_edit .af-button-small,
+.post_edit .af-button-small {
+}
+
+.comment_edit .af-button-small span,
+.post_edit .af-button-small span {
+}
+
+/* Delete */
+.comment_delete .af-button-small,
+.post_delete .af-button-small {
+}
+
+.comment_delete .af-button-small span,
+.post_delete .af-button-small span {
 }
